# pko-tools

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SESSION_CONTEXT.md  index.html  package.json  pnpm-lock.yaml  survey_anim.py  tsconfig.json  vite.config.ts  vitest.config.ts
formats/: pko_eff.ksy  (+9 more)
src-tauri/: .taurignore  Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json  test.gltf
src-tauri/.cargo/: config.toml
src-tauri/examples/: decompile_characterinfo.rs  export_cli.rs  export_effects.rs  export_legacy_mapdata.rs  pko_inspect.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/animation/: action_table.rs  character.rs  commands.rs  lab_loader.rs  mod.rs  pose_info.rs
src-tauri/src/broadcast/: mod.rs
src-tauri/src/character/: animation.rs  commands.rs  helper.rs  info.rs  lgo_loader.rs  math.rs  mesh.rs  mod.rs  model.rs  texture.rs
src-tauri/src/d3d/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/decompiler/: decrypt.rs  error.rs  mod.rs  parser.rs  structure.rs  structures.rs  types.rs
src-tauri/src/effect/: commands.rs  eff_loader.rs  export.rs  mod.rs  model.rs  par_loader.rs  texture_export.rs
src-tauri/src/effect_v2/: commands.rs  magic_group_loader.rs  magic_single_loader.rs  mod.rs  model.rs
src-tauri/src/item/: commands.rs  info.rs  lit.rs  mod.rs  model.rs  refine.rs  sceneffect.rs  workbench.rs
src-tauri/src/map/: area_set.rs  building_import.rs  building_workbench.rs  commands.rs  glb.rs  grid_images.rs  lit.rs  lmo.rs  lmo_loader.rs  lmo_types.rs  lmo_writer.rs  map_loader.rs  mapinfo.rs  mod.rs  obj_loader.rs  scene_model.rs  scene_obj.rs  scene_obj_info.rs  shared.rs  terrain.rs  texture.rs
src-tauri/src/math/: coord_transform.rs  mod.rs
src-tauri/src/mesh_processing/: analysis.rs  bsphere.rs  commands.rs  mod.rs  transform.rs
src-tauri/src/preferences/: mod.rs
src-tauri/src/projects/: commands.rs  project.rs
src-tauri/src/registration/: commands.rs  mod.rs
src-tauri/src/retarget/: commands.rs  dummy.rs  mapper.rs  mod.rs  reducer.rs  skeleton.rs
src-tauri/src/texture_pipeline/: commands.rs  converter.rs  material.rs  mod.rs  resizer.rs
src-tauri/src/validation/: autofix.rs  commands.rs  limits.rs  mod.rs  report.rs  rules.rs
src-tauri/test_artifacts/: 0909000000.lgo
src-tauri/tests/: byte_equality_test.rs  effect_invariant_test.rs  effect_parser_test.rs  effect_roundtrip_test.rs  effect_schema_sync_test.rs  golden_reference_tests.rs  hierarchy_tests.rs  index_space_tests.rs  model_088_roundtrip_test.rs  model_725_black_dragon_test.rs  normalized_roundtrip_test.rs  roundtrip_test.rs  skinning_tests.rs  struct_comparison_test.rs
src-tauri/tests/common/: mod.rs
src-tauri/tests/snapshots/: golden_reference_tests__snapshot_eff_lighty.snap  golden_reference_tests__snapshot_lab_0724.snap  (+6 more)
(+404 files in other folders)
