[package]
name = "pko-tools"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pko_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = "0.32.1"
tauri-plugin-dialog = "2"
uuid = "1.11.0"
anyhow = "1.0.95"
gltf = { version = "1.4.1", features = ["extras"] }
binrw = "0.14.1"
tokio = "1.43.0"
bytemuck = "1.21.0"
base64 = "0.22.1"
cgmath = "0.18.0"
csv = "1.3.1"
ptree = "0.5.2"

